--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
 <header>
     <h1>I am Tedore</h1>
-    <p>I am a inctructor</p>
+    <p>I am Web-developer</p>
 </header>
 <section class="tedo">
 <h2>Hello World</h2>
